fix: header and row data alignment while dragging[ECO-1021]

--- a/src/pages/FieldExtension/styles.scss
+++ b/src/pages/FieldExtension/styles.scss
@@ -174,18 +174,18 @@
           }
 
           .tippy-wrapper {
-            width: fill-available;
-            min-width: 150px;
-
-            // .tooltip-wrapper {
-            //   width: inherit !important;
-            // }
+            box-sizing: border-box;
+            flex: 150 0 auto;
+            min-width: 50px;
 
             .dragIcon {
               position: absolute;
               top: -7px;
               z-index: 9;
-              left: 104px;
+              left: 50%;
+              -webkit-transform: translateX(-50%);
+              -ms-transform: translateX(-50%);
+              transform: translateX(-50%);
               cursor: grabbing;
             }
           }
@@ -407,7 +407,9 @@ html {
   padding: 0 5px;
 
   //To-do: handle width
-  width: fill-available !important;
+  // width: fill-available !important;
+
+  width: 100% !important;
 }
 
 .th:hover {
